[package]
name = "blender_bevy_toolkit"
version = "0.2.0"
authors = ["Geoffrey Irons <sdfgeoff@gmail.com>"]
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0"
serde = {version = "1", features = ["derive"]}
smallvec = { version = "1.4", features = ["serde"] }
glam = { version = "0.23.0" }
bevy="0.10.0"

[dependencies.bevy_rapier3d]
version="0.21.0"

[dependencies.ron]
version= "0.8.0"